CSHARP-718 - Normalize VB Nothing comparison

--- a/MongoDB.DriverUnitTestsVB/MongoDB.DriverUnitTestsVB.vbproj
+++ b/MongoDB.DriverUnitTestsVB/MongoDB.DriverUnitTestsVB.vbproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Jira\CSharp542.vb" />
+    <Compile Include="Jira\CSharp718.vb" />
     <Compile Include="Linq\MongoQueryableTests.vb" />
     <Compile Include="Linq\MongoQueryProviderTests.vb" />
     <Compile Include="Linq\SelectDictionaryTests.vb" />
