--- a/MongoDB.DriverUnitTests/MongoDB.DriverUnitTests.csproj
+++ b/MongoDB.DriverUnitTests/MongoDB.DriverUnitTests.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Jira\CSharp542Tests.cs" />
     <Compile Include="Jira\CSharp653Tests.cs" />
     <Compile Include="Jira\CSharp714Tests.cs" />
+    <Compile Include="Jira\CSharp718Tests.cs" />
     <Compile Include="MongoClientSettingsTests.cs" />
     <Compile Include="ReadPreferenceTests.cs" />
     <Compile Include="MongoCollectionSettingsTests.cs" />
