CSHARP-874 - Made the generic and non generic versions of the options builder the same for consistency.

--- a/MongoDB.DriverUnitTests/MongoDB.DriverUnitTests.csproj
+++ b/MongoDB.DriverUnitTests/MongoDB.DriverUnitTests.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Builders\IndexKeysBuilderTests.cs" />
     <Compile Include="Builders\IndexOptionsBuilderTests.cs" />
     <Compile Include="Builders\IndexKeysBuilderTypedTests.cs" />
+    <Compile Include="Builders\IndexOptionsBuilderTypedTests.cs" />
     <Compile Include="Builders\MapReduceOptionsBuilderTests.cs" />
     <Compile Include="Builders\QueryBuilderGeoJsonIntegrationTests.cs" />
     <Compile Include="Builders\QueryBuilderTests.cs" />
